@@ -1,3 +1,6 @@
+2006-10-02  Emmanuel Dreyfus  <manu@netbsd.org>
+	* src/racoon/socketmisc.c: don't use NULL pointer (Coverity)
+	
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
 	* src/racoon/ipsec_doi.c: FIx memory leak (Coverity)
